content/_generated-doc/2.7/config/quarkus-kubernetes-config-group-secret-volume-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-secret-volume-config_configuration]]link:#quarkus-kubernetes-config-group-secret-volume-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name[quarkus.knative.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode[quarkus.knative.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.optional[quarkus.knative.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.secret-name[quarkus.kubernetes.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.default-mode[quarkus.kubernetes.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.optional[quarkus.kubernetes.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.secret-name[quarkus.openshift.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.default-mode[quarkus.openshift.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.optional[quarkus.openshift.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`

|===