content/_generated-doc/2.16/config/quarkus-kubernetes-config-group-secret-volume-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-secret-volume-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-secret-volume-config_configuration]]link:#quarkus-kubernetes-config-group-secret-volume-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name[quarkus.knative.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode[quarkus.knative.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.items.-items-.path]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.items.-items-.path[quarkus.knative.secret-volumes."secret-volumes".items."items".path]`

[.description]
--
The path where the file will be mounted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.items.-items-.mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.items.-items-.mode[quarkus.knative.secret-volumes."secret-volumes".items."items".mode]`

[.description]
--
It must be a value between 0000 and 0777. If not specified, the volume defaultMode will be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`-1`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.knative.secret-volumes.-secret-volumes-.optional[quarkus.knative.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.secret-name[quarkus.kubernetes.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.default-mode[quarkus.kubernetes.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.items.-items-.path]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.items.-items-.path[quarkus.kubernetes.secret-volumes."secret-volumes".items."items".path]`

[.description]
--
The path where the file will be mounted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.items.-items-.mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.items.-items-.mode[quarkus.kubernetes.secret-volumes."secret-volumes".items."items".mode]`

[.description]
--
It must be a value between 0000 and 0777. If not specified, the volume defaultMode will be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`-1`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.kubernetes.secret-volumes.-secret-volumes-.optional[quarkus.kubernetes.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.secret-name[quarkus.openshift.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__SECRET_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.default-mode[quarkus.openshift.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__DEFAULT_MODE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.items.-items-.path]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.items.-items-.path[quarkus.openshift.secret-volumes."secret-volumes".items."items".path]`

[.description]
--
The path where the file will be mounted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.items.-items-.mode]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.items.-items-.mode[quarkus.openshift.secret-volumes."secret-volumes".items."items".mode]`

[.description]
--
It must be a value between 0000 and 0777. If not specified, the volume defaultMode will be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__ITEMS__ITEMS__MODE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`-1`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-kubernetes-config-group-secret-volume-config_quarkus.openshift.secret-volumes.-secret-volumes-.optional[quarkus.openshift.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SECRET_VOLUMES__SECRET_VOLUMES__OPTIONAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===